--- a/react-portfolio/public/index.html
+++ b/react-portfolio/public/index.html
@@ -38,11 +38,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Israel Nonato - Portfólio</title>
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>Você precisa ativar o JavaScript para rodar esse código.</noscript>
   <div id="root"></div>
   <!--
       This HTML file is a template.
